--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -2,8 +2,27 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
 .home-text h1 {
-    color: #FFB6B9
+    color: #FFB6B9;
+    overflow: hidden;
+    font-family: monospace !important;
+    border-right: .15em solid #D9D9D9;
+    white-space: nowrap;
+    margin: 0 auto;
+    animation: 
+        animated-text 3s steps(15,end) 1s 1 normal both,
+        animated-cursor 700ms steps(15,end) infinite;
+}
+
+@keyframes animated-text{
+    from{width: 0;}
+    to{width: 220px;}
+}
+
+@keyframes animated-cursor{
+    from{border-right-color: #D9D9D9;}
+    to{border-right-color: transparent;}
 }
