--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -9,20 +9,38 @@
     color: #FFB6B9;
     overflow: hidden;
     font-family: monospace !important;
-    border-right: .15em solid #D9D9D9;
+    border-right: .15em solid transparent;
     white-space: nowrap;
     margin: 0 auto;
     animation: 
         animated-text 3s steps(15,end) 1s 1 normal both,
-        animated-cursor 700ms steps(15,end) infinite;
+        animated-cursor 700ms steps(15,end) 1s 5;
 }
 
-@keyframes animated-text{
-    from{width: 0;}
-    to{width: 220px;}
+@keyframes animated-text {
+    from {width: 0;}
+    to {width: 255px;}
 }
 
-@keyframes animated-cursor{
-    from{border-right-color: #D9D9D9;}
-    to{border-right-color: transparent;}
+@keyframes animated-cursor {
+    from {border-right-color: #D9D9D9;}
+    to {border-right-color: transparent;}
+}
+
+span.wave {
+    animation-name: wave-animation;
+    animation-duration: 2.5s;
+    animation-iteration-count: 3;
+    transform-origin: 70% 70%;
+    display: inline-block;
+}
+  
+@keyframes wave-animation {
+    0% { transform: rotate(  0.0deg) }
+    10% { transform: rotate(-10.0deg) }
+    20% { transform: rotate( 12.0deg) }
+    30% { transform: rotate(-10.0deg) }
+    40% { transform: rotate(  9.0deg) }
+    50% { transform: rotate(  0.0deg) }
+    100% { transform: rotate(  0.0deg) }
 }
