Add dots to footer

--- a/src/Styles/FooterIcon.css
+++ b/src/Styles/FooterIcon.css
@@ -1,7 +1,11 @@
 .footer-icon-container {
     position: fixed;
-    bottom: 30px;
+    bottom: 0px;
     width: 100%;
+    display: flex;
+    align-items: center;
+    height: 25px;
+    padding: 10px;
 }
 
 .footer-icon-content {
