--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -1,10 +1,11 @@
 .footer-container {
     position: fixed;
-    bottom: 20px;
+    bottom: 0px;
     display: flex;
-    height: auto;
     min-width: 100%;
     padding: 10px;
+    align-items: center;
+    height: 25px;
 }
 
 .footer-copyright {
@@ -27,6 +28,7 @@
     position: fixed;
     right: 20px;
     display: flex;
+    align-items: center;
 }
 
 .footer-link {
@@ -45,3 +47,14 @@
 .footer-link:hover svg {
     transform: scale(1.3);
 } 
+
+.footer-link h3 {
+    padding: 0px;
+    margin: 0px;
+    transition: transform .15s;
+    cursor: pointer;
+    animation-name: fadeIn;
+    animation-duration: 0.3s;
+    opacity: 0;
+    animation-fill-mode: forwards;     
+}
