--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -22,6 +22,7 @@
     animation-duration: 0.5s;
     opacity: 0;
     animation-fill-mode: forwards;
+    cursor: default;
 }
 
 .footer-links-container {
@@ -52,9 +53,10 @@
     padding: 0px;
     margin: 0px;
     transition: transform .15s;
-    cursor: pointer;
     animation-name: fadeIn;
     animation-duration: 0.3s;
     opacity: 0;
     animation-fill-mode: forwards;     
+    cursor: default;
+    margin-top: -2px;
 }
