--- a/src/Styles/Projects.css
+++ b/src/Styles/Projects.css
@@ -1,6 +1,6 @@
 .projects-container {
     min-height: 100vh;
-    padding: 150px;
+    padding-top: 140px;
     box-sizing: border-box;
     overflow: hidden;
 }
@@ -15,11 +15,11 @@
 }
 
 .projects-title {
-    padding-bottom: 50px;
+    padding-bottom: 100px;
 }
 
 .projects-container h1 {
-    color: #FFB6B9;
+    color: #ffb6b9;
     font-family: monospace !important;
     text-align: left;
     padding: 0px;
@@ -49,7 +49,7 @@
 }
 
 .projects-expresso-content p {
-    color: #D9D9D9;
+    color: #d9d9d9;
     padding: 0px;
     margin: 0px;
     text-align: left;
@@ -60,6 +60,70 @@
 }
 
 .projects-expresso-content a {
-    color: #D9D9D9;
+    color: #d9d9d9;
+}
 
+.projectcard-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.projectcard-image img {
+    height: 175px;
+    border-radius: 5px;
+    box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.5);
+    margin-bottom: 10px;
+}
+
+.projectcard-image {
+    display: flex;
+    align-items: center;
+}
+
+.projectcard-container h2,
+.projectcard-container h3 {
+    font-family: monospace !important;
+    color: #333333;
+    margin: 0px;
+    display: inline;
+    font-weight: bold;
+}
+
+.projectcard-content {
+    display: grid;
+    grid-template-columns: 32% 68%;
+    /*grid-template-rows: 25% 25% 25%;*/
+    text-align: left;
+    grid-gap: 15px 0px;
+    align-items: baseline;
+}
+
+.projectcard-container p {
+    display: inline;
+    margin: 0px;
+    color: #333333;
+}
+
+.projectcard-buttons {
+    display: flex;
+    position: absolute;
+    bottom: 30px;
+}
+
+.projectcard-buttons p {
+    font-family: monospace !important;
+    margin: 0px;
+}
+
+.projectcard-demo,
+.projectcard-code {
+    width: 100px;
+    padding: 10px;
+    border-radius: 100px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    align-items: center;
 }
