--- a/src/Styles/Projects.css
+++ b/src/Styles/Projects.css
@@ -11,7 +11,9 @@
 
 .projects-content {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .projects-title {
@@ -26,45 +28,7 @@
     margin: 0px;
 }
 
-.projects-expresso-wrapper {
-    padding: 50px 0px;
-    display: flex;
-}
-
-.projects-expresso-image {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.projects-expresso-image img {
-    height: 200px;
-    padding: 0px 100px;
-}
-
-.projects-expresso-content {
-    padding-left: 50px;
-    display: flex;
-    flex-direction: column;
-}
-
-.projects-expresso-content p {
-    color: #d9d9d9;
-    padding: 0px;
-    margin: 0px;
-    text-align: left;
-}
-
-.projects-expresso-content h2 {
-    text-align: left;
-}
-
-.projects-expresso-content a {
-    color: #d9d9d9;
-}
-
 .projectcard-container {
-    width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -96,7 +60,7 @@
     /*grid-template-rows: 25% 25% 25%;*/
     text-align: left;
     grid-gap: 15px 0px;
-    align-items: baseline;
+    position: relative;
 }
 
 .projectcard-container p {
@@ -129,11 +93,18 @@
 }
 
 .projectcard-site:hover svg,
-.projectcard-code:hover svg {
+.projectcard-code:hover svg,
+.arrow-container:hover svg {
     transform: scale(1.15);
 }
 
 .projectcard-site svg,
-.projectcard-code svg {
+.projectcard-code svg,
+.arrow-container svg {
     transition: transform 0.1s;
+}
+
+.arrow-container {
+    display: flex;
+    cursor: pointer;
 }
