--- a/src/Styles/Projects.css
+++ b/src/Styles/Projects.css
@@ -65,7 +65,10 @@
     display: flex;
     position: absolute;
     bottom: 30px;
-    margin-top: 30px;
+    padding-top: 30px;
+    justify-content: center;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .projectcard-buttons p {
@@ -83,6 +86,7 @@
     justify-content: center;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
     align-items: center;
+    margin: 10px;
 }
 
 .projectcard-site:hover svg,
@@ -102,6 +106,7 @@
     cursor: pointer;
 }
 
+/*
 .MuiGrid-item {
     margin-bottom: 15px !important;
-}
+} */
