--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -1,52 +1,23 @@
 .about-container {
-    height: 100vh;
-    padding: 150px;
+    padding-top: 100px;
     box-sizing: border-box;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.about-container img {
+    height: 200px;
+    box-shadow: 20px 20px 20px black;
+    border-radius: 100px;
 }
 
 .about-container p {
-    text-align: left;
+    color: #d9d9d9;
 }
 
-.about-content-container {
-    display: flex;
-    padding-top: 150px;
-    flex-basis: 100%;
-}
-
-.about-content-left {
-    display: flex;
-    flex-grow: 1 1 auto;
-    padding: 20px;
-    justify-content: center;
-}
-
-.about-content-left img {
-    height: 200px;
-    width: 200px;
-    padding-right: 100px;
-    padding-left: 150px;
-}
-
-.about-content-right {
-    display: flex;
-    flex-grow: 2 2 auto;
-    padding-left: 100px;
-    flex-direction: column;
-}
-
-.about-content-right h1 {
-    color: #FFB6B9;
+.about-container h2 {
+    color: #ffb6b9;
     font-family: monospace !important;
-    text-align: left;
-    padding: 0px;
-    margin: 0px;
-}
-
-.about-content-right p { 
-    color: #D9D9D9;
-}
-
-.about-content-timeline {
-    margin-top: 50px;
 }
