--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -6,44 +6,43 @@
 }
 
 .home-text h1 {
-    color: #FFB6B9;
+    color: #ffb6b9;
+    text-shadow: 5px 5px 5px black;
     overflow: hidden;
     font-family: monospace !important;
-    border-right: .15em solid transparent;
+    border-right: 0.15em solid transparent;
     white-space: nowrap;
-    padding: 0px;
     margin: 0px;
     cursor: default;
-    animation: 
-        animated-text 3s steps(15,end) 1s 1 normal both,
-        animated-cursor 700ms steps(15,end) 1s 5;
-        
-}
-
-.home-text h3 {
-    color: #D9D9D9;
-    padding: 0px;
-    margin: 0px;
-    animation-name: fadeIn;
-    animation-delay: 5s;
-    animation-duration: 3s;
-    opacity: 0;
-    animation-fill-mode: forwards;  
+    animation: animated-text 3s steps(15, end) 1s 1 normal both,
+        animated-cursor 700ms steps(15, end) 1s 5;
 }
 
 @keyframes fadeIn {
-    0% {opacity: 0;}
-    100% {opacity: 1;}
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 @keyframes animated-text {
-    from {width: 0;}
-    to {width: 255px;}
+    from {
+        width: 0px;
+    }
+    to {
+        width: 260px;
+    }
 }
 
 @keyframes animated-cursor {
-    from {border-right-color: #D9D9D9;}
-    to {border-right-color: transparent;}
+    from {
+        border-right-color: #d9d9d9;
+    }
+    to {
+        border-right-color: transparent;
+    }
 }
 
 span.wave {
@@ -52,8 +51,9 @@ span.wave {
     animation-iteration-count: 3;
     transform-origin: 70% 70%;
     display: inline-block;
+    padding-right: 5px;
+    padding-bottom: 5px;
 }
-
 
 .home-text:hover span.wave {
     animation-name: wave-animation;
@@ -61,14 +61,28 @@ span.wave {
     animation-iteration-count: infinite;
     transform-origin: 70% 70%;
     animation-fill-mode: forwards;
-} 
+}
 
 @keyframes wave-animation {
-    0% { transform: rotate(  0.0deg) }
-    10% { transform: rotate(-10.0deg) }
-    20% { transform: rotate( 12.0deg) }
-    30% { transform: rotate(-10.0deg) }
-    40% { transform: rotate(  9.0deg) }
-    50% { transform: rotate(  0.0deg) }
-    100% { transform: rotate(  0.0deg) }
+    0% {
+        transform: rotate(0deg);
+    }
+    10% {
+        transform: rotate(-10deg);
+    }
+    20% {
+        transform: rotate(12deg);
+    }
+    30% {
+        transform: rotate(-10deg);
+    }
+    40% {
+        transform: rotate(9deg);
+    }
+    50% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
 }
