--- a/src/Styles/Projects.css
+++ b/src/Styles/Projects.css
@@ -83,6 +83,10 @@
     text-decoration: none;
 }
 
+.projectcard-button:hover {
+    opacity: 0.87;
+}
+
 .projectcard-button {
     width: 80px;
     padding: 10px;
@@ -98,6 +102,10 @@
 .projectcard-button:hover svg,
 .arrow-container:hover svg {
     transform: scale(1.15);
+}
+
+.arrow-container:hover svg {
+    fill: #cecece !important;
 }
 
 .projectcard-button svg,
