--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -43,3 +43,9 @@
     pointer-events: none;
     cursor: default;
 }
+
+#slash {
+    color: #d9d9d9;
+    padding-right: 5px;
+    cursor: default;
+}
