--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -14,11 +14,11 @@
 }
 
 .contact-content p {
-    color: #d9d9d9;
+    color: var(--light-gray);
 }
 
 .contact-content h2 {
-    color: #ffb6b9;
+    color: var(--light-pink);
     font-family: monospace !important;
     margin-bottom: 40px;
     text-shadow: 5px 5px 5px black;
