--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -1,30 +1,30 @@
 .header-container {
     position: absolute;
-    top: 0px;
+    top: 0rem;
     width: 100%;
     display: flex;
 }
 
 .header-container h3 {
-    padding: 0px;
-    margin: 0px;
+    padding: 0rem;
+    margin: 0rem;
 }
 
 .header-logo {
     position: fixed;
-    left: 0px;
-    padding-top: 30px;
-    padding-left: 50px;
+    left: 0rem;
+    padding-top: 3rem;
+    padding-left: 5rem;
 }
 
 .header-content {
     display: flex;
     flex-direction: row;
-    padding-top: 30px;
+    padding-top: 3rem;
 }
 
 .header-dot {
-    margin-top: -5px;
+    margin-top: -0.5rem;
     display: none;
     cursor: pointer;
 }
@@ -34,7 +34,7 @@
 }
 
 .header-dot-active {
-    margin-top: -5px;
+    margin-top: -0.5rem;
     display: block;
     cursor: pointer;
 }
@@ -46,6 +46,6 @@
 
 #slash {
     color: var(--light-gray);
-    padding-right: 5px;
+    padding-right: 0.5rem;
     cursor: default;
 }
