--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -10,7 +10,7 @@
 .contact-content {
     max-width: 40rem;
     text-align: left;
-    padding: 0rem 5rem;
+    padding: 0px 5rem;
 }
 
 .contact-content p {
