--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,8 @@ body {
 #root {
     text-align: center;
     background-color: var(--dark-gray);
-    padding: 0rem;
-    margin: 0rem;
+    padding: 0px;
+    margin: 0px;
     min-height: 100vh;
     width: 100%;
 }
