--- a/src/Styles/Error.css
+++ b/src/Styles/Error.css
@@ -8,7 +8,7 @@
 .error-text h1 {
     color: var(--light-pink);
     font-family: monospace !important;
-    padding: 0rem;
-    margin: 0rem;
+    padding: 0px;
+    margin: 0px;
     text-shadow: 0.5rem 0.5rem 0.5rem black;
 }
