Update dark gray

--- a/src/App.css
+++ b/src/App.css
@@ -32,8 +32,8 @@ body {
 }
 
 :root {
-    --dark-gray: #333333;
-    --dark-pink: #ff7c7c;
+    --dark-gray: #2a2b2e;
+    --dark-pink: #000000;
     --light-pink: #ffb6b9;
     --blue: #8deaff;
     --yellow: #ffe084;
