--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ body {
 
 :root {
     --dark-gray: #2a2b2e;
-    --dark-pink: #000000;
+    --dark-pink: #ff7c7c;
     --light-pink: #ffb6b9;
     --blue: #8deaff;
     --yellow: #ffe084;
