Add footer to mobile

--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -1,5 +1,6 @@
 .contact-container {
     padding-top: 20rem;
+    padding-bottom: 8rem;
     box-sizing: border-box;
     overflow: hidden;
     display: flex;
