--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -30,10 +30,10 @@
   text-decoration: underline;
 }
 
-.projects-link {
+.internal-link {
   text-decoration: none;
 }
-.projects-link:hover {
+.internal-link:hover {
   text-decoration: underline;
 }
 
