--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -47,25 +47,18 @@ span.wave {
 }
 
 @keyframes wave-animation {
-  0% {
+  0%,
+  50% {
     transform: rotate(0deg);
   }
-  10% {
+  10%,
+  30% {
     transform: rotate(-10deg);
   }
   20% {
     transform: rotate(12deg);
   }
-  30% {
-    transform: rotate(-10deg);
-  }
   40% {
     transform: rotate(9deg);
-  }
-  50% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(0deg);
   }
 }
