--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -1,8 +1,7 @@
 .header-container {
-  position: absolute;
-  top: 0px;
   width: 100%;
   display: flex;
+  font-family: 'Varela Round';
 }
 
 .header-container h3 {
