--- a/src/Styles/Projects.scss
+++ b/src/Styles/Projects.scss
@@ -8,12 +8,13 @@ $color-gray-light: #d9d9d9;
 $color-gray-medium: #bdbdbd;
 
 .projects-container {
-  min-height: 100vh;
-  padding-top: 10rem;
+  margin-top: 8rem;
+  max-height: calc(100vh - 8rem - 45px);
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-y: scroll;
 }
 
 .projects-container a {
@@ -117,14 +118,14 @@ $color-gray-medium: #bdbdbd;
 }
 
 .ProjectsCard {
-  border: 2px solid $color-white-almost;
+  border: 1px solid $color-white-almost;
   max-width: 700px;
   display: flex;
   padding: 20px 30px;
   align-items: center;
   justify-content: space-between;
   border-radius: 5px;
-  margin-bottom: 50px;
+  margin: 25px;
 
   &-left {
     display: flex;
